# blackbox-esp-cpp

./: CHANGELOG.md  README.md
.github/workflows/: upload-component.yml
component/: CMakeLists.txt  idf_component.yml  pl_blackbox_base.cpp  pl_blackbox_configuration.cpp  pl_blackbox_ethernet_configuration.cpp  pl_blackbox_hardware_interface_configuration.cpp  pl_blackbox_http_server_configuration.cpp  pl_blackbox_mdns_server_configuration.cpp  pl_blackbox_modbus_server.cpp  pl_blackbox_modbus_server_configuration.cpp  pl_blackbox_network_interface_configuration.cpp  pl_blackbox_network_server_configuration.cpp  pl_blackbox_server_configuration.cpp  pl_blackbox_stream_server_configuration.cpp  pl_blackbox_uart_configuration.cpp  pl_blackbox_usb_device_cdc_configuration.cpp  pl_blackbox_wifi_station_configuration.cpp
component/include/: pl_blackbox.h  pl_blackbox_base.h  pl_blackbox_configuration.h  pl_blackbox_configuration_parameter.h  pl_blackbox_ethernet_configuration.h  pl_blackbox_hardware_interface_configuration.h  pl_blackbox_http_server_configuration.h  pl_blackbox_mdns_server_configuration.h  pl_blackbox_modbus_server.h  pl_blackbox_modbus_server_configuration.h  pl_blackbox_network_interface_configuration.h  pl_blackbox_network_server_configuration.h  pl_blackbox_server_configuration.h  pl_blackbox_stream_server_configuration.h  pl_blackbox_types.h  pl_blackbox_uart_configuration.h  pl_blackbox_usb_device_cdc_configuration.h  pl_blackbox_wifi_station_configuration.h
docs/: index.rst
docs/api/: blackbox_base.rst  types.rst  (+14 more)
test/: CMakeLists.txt
(+7 files in other folders)
